# convex-body-chasing

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: advanced-explorations.md  implementation-plan.md
src/convex_body_chasing/: __init__.py  bodies.py
src/convex_body_chasing/algorithms/: greedy.py
tests/: __init__.py  test_greedy.py  test_intersection.py  test_polygon.py  test_rectangle.py
